third_party/rust/pin-project/tests/ui/pinned_drop/call-drop-inner.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> tests/ui/pinned_drop/call-drop-inner.rs:13:9
   |
13 |         __drop_inner(__self);
   |         ^^^^^^^^^^^^ ------ argument of type `Pin<&mut Struct>` unexpected
   |
note: function defined here
  --> tests/ui/pinned_drop/call-drop-inner.rs:10:1
   |
10 | #[pinned_drop]
   | ^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `pinned_drop` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the extra argument
   |
13 |         __drop_inner();
   |         ~~~~~~~~~~~~~~
